# 2D_Renderer

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  example_usage.cpp  main.cpp
Documentation/: RenderingAbstraction.txt  VertexBuffersAndShaders.txt
Notes/: setting_up_vulkan.md
include/: App.hpp  EventManager.hpp  Logger.hpp  Renderer.hpp  Shader.hpp  Utility.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferInline.hpp  Windowing.hpp  glad.h
shaders/fragment/: fragment.glsl
src/: App.cpp  EventManager.cpp  Logger.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  Windowing.cpp  glad.cpp
